# patrika-web

./: .env.example  .gitignore  .mcp.json  FRAMEWORK_STRUCTURE.md  conftest.py  package.json  playwright.config.ts  pyproject.toml  pytest.ini  requirements.txt  tsconfig.json
.playwright-mcp/: page-2026-07-16T06-03-14-740Z.yml
docs/: CSV_AUTOMATION_SUMMARY.md  LOGIN_AUTOMATION_GUIDE.md  README.md  README_PYTHON.md  REPORTS_GUIDE.md  TEST_REPORT_STRUCTURE.md  automation-handover.html
pages/: BasePage.ts  HomePage.ts  __init__.py  base_page.py  home_page.py  login_page.py
test-data/: Home_Patrika.csv  LoginTest.csv
tests/: __init__.py  example.spec.ts  test_demo.py  test_example.py  test_home_page.py  test_login_from_csv.py
utils/: __init__.py  csv_loader.py  testHelpers.ts  test_helpers.py
